--- a/portfolio-frontend/src/index.html
+++ b/portfolio-frontend/src/index.html
@@ -6,6 +6,18 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Full Stack Software Engineer specializing in ASP.NET Core, Angular, and cloud technologies">
+  <meta name="theme-color" content="#667eea">
+  
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Rustem Aisariyev - Full Stack Software Engineer">
+  <meta property="og:description" content="Building scalable web applications with ASP.NET Core, Angular, and cloud technologies">
+  
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@600;700;800&display=swap" rel="stylesheet">
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
